# Advent-of-Code

./: .gitattributes  .gitignore  README.md  pyproject.toml  ruff.toml
2023/day_1/: main.py
2023/day_2/: main.py
2024/day-1/: main.py
2024/day-2/: main.py
2024/day-3/: main.py
2024/day-4/: main.py
2024/day-5/: main.py
2024/day-6/: main.py
2024/day-7/: main.py
2024/day_1/: main.py
2024/day_2/: main.py
2024/day_3/: main.py
2024/day_4/: main.py
2024/day_5/: main.py
2024/day_6/: main.py
2024/day_7/: main.py
2024/day_8/: main.py
2024/day_9/: main.py
src/advent_of_code/: __init__.py
src/advent_of_code/2023/day_1/: main.py
src/advent_of_code/2023/day_2/: main.py
src/advent_of_code/2024/day_1/: main.py
src/advent_of_code/2024/day_2/: main.py
src/advent_of_code/2024/day_3/: main.py
src/advent_of_code/2024/day_4/: main.py
src/advent_of_code/2024/day_5/: main.py
src/advent_of_code/2024/day_6/: main.py
src/advent_of_code/2024/day_7/: main.py
src/advent_of_code/2024/day_8/: main.py
src/advent_of_code/2024/day_9/: main.py
src/advent_of_code/year_2023/: day_01.py  day_02.py
src/advent_of_code/year_2024/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py
tests/year_2023/: test_day_01.py  test_day_02.py
tests/year_2024/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py
